k8s/_shared/redis-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: redis-service
  namespace: ruralneighbour-dev
  labels:
    app: redis-service
spec:
  type: ClusterIP
  ports:
  - port: 6379
    name: redis
  selector:
    app: redis-service
